shifting popup placement

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -140,7 +140,7 @@
                 <img src="../images/badges/hydra-slayer-mono.webp" id="hydra-slayer" class="badge pulse">
                 <div class="badgeToPopup" id="hydra-slayer-popup">
                     <h4>Hydra Slayer</h4>
-                    <p>Slaying the hydra is no easy feat. 
+                    <p>Slaying the hydra is no easy feat.<br>
                         To earn this badge, you must write at least 
                         500 works within a 5 minute writing sprint.</p>
                 </div>
