fixed a typo in the hydra slayer badge description

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -142,7 +142,7 @@
                     <h4>Hydra Slayer</h4>
                     <p>Slaying the hydra is no easy feat.<br>
                         To earn this badge, you must write at least 
-                        500 works within a 5 minute writing sprint.</p>
+                        500 words within a 5 minute writing sprint.</p>
                 </div>
             </div>
             <!--* veteran guildmember-->
