started profile section of profile page

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -83,7 +83,14 @@
             </div>
         </nav>
     </header>
-    <div>
+    <div class="profile-wrapper">
+        <div class="profile-container">
+            <div class="user-container">
+                <img src="../images/dragon/dragon-0.webp" alt="profile image" id="profilePicture">
+                <h2 id="username">Username</h2>
+            </div>
+        </div>
+    </div>
         <!--* BADGES-->
         <div class="badge-container">
             <div class="slider-container">
@@ -180,7 +187,6 @@
         <p id="instruction">To give yourself a badge, simply activate the toggle and click on a badge. 
                         Click on it again to remove it.</p>
         </div>
-    </div>
     <!--* FOOTER-->
     <!--! Keep link to logo artist for permission to use-->
     <footer id="footer">
