--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -91,6 +91,36 @@
             </div>
         </div>
     </div>
+    <div class="current-project-wrapper">
+            <div class="current-project-container">
+                <div id="area-title">
+                    <h1>Your Current Project</h1>
+                </div>
+                <div class="progress-info-container">
+                    <div id="project-img">
+                        <img src="../images/genre-covers/placeholder(v3).webp" id="theme-img">
+                    </div>
+                    <!-- <div id="project-title">
+                        <h2>Title</h2>
+                    </div> -->
+                    <div id="project-summary">
+                        <p>Looks like you don't have any active projects.
+                            <br><br>
+                            Click <a href="newProject.html">here</a> to get started!
+                        </p>
+                        <!-- <p id="summary-text">
+                            Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
+                            sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
+                            convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
+                            fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada 
+                            lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti 
+                            sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci 
+                            varius natoque penatibus et magnis dis parturient montes nascetur
+                        </p> -->
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--* BADGES-->
         <div class="badge-container">
             <div class="slider-container">
