worked more on profile area of profile page

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -89,6 +89,12 @@
                 <img src="../images/dragon/dragon-0.webp" alt="profile image" id="profilePicture">
                 <h2 id="username">Username</h2>
             </div>
+            <div class="fav-container">
+                <h2>Favs:</h2>
+                <p>Favorite thing number 1</p>
+                <p>Favorite thing number 2</p>
+                <p>Favorite thing number 2</p>
+            </div>
         </div>
     </div>
     <div class="current-project-wrapper">
