add bio section

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -87,7 +87,7 @@
         <div class="profile-container">
             <div class="user-container">
                 <img src="../images/dragon/dragon-0.webp" alt="profile image" id="profilePicture">
-                <h2 id="username">Username</h2>
+                <h3 id="username">Username</h3>
             </div>
             <div class="fav-container">
                 <h2>Favs:</h2>
@@ -95,6 +95,11 @@
                 <p>Favorite thing number 2</p>
                 <p>Favorite thing number 2</p>
             </div>
+        </div>
+        <div class="bio-container">
+            <h2>Bio:</h2>
+            <p>I like fantasy and sci-fi stories and have been working on a novel for over 5 years now. 
+                Maybe someday it'll be ready for publication...</p>
         </div>
     </div>
     <div class="current-project-wrapper">
