--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -87,7 +87,7 @@
         <div class="profile-container">
             <div class="user-container">
                 <img src="../images/dragon/dragon-0.webp" alt="profile image" id="profilePicture">
-                <h3 id="username">Username</h3>
+                <h1 id="username">Username</h1>
             </div>
             <div class="fav-container">
                 <h2>Favs:</h2>
@@ -98,8 +98,10 @@
         </div>
         <div class="bio-container">
             <h2>Bio:</h2>
-            <p>I like fantasy and sci-fi stories and have been working on a novel for over 5 years now. 
-                Maybe someday it'll be ready for publication...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
+                            sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
+                            convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
+                            fringilla lacus nec metus bibendum egestas</p>
         </div>
     </div>
     <div class="current-project-wrapper">
@@ -111,15 +113,15 @@
                     <div id="project-img">
                         <img src="../images/genre-covers/placeholder(v3).webp" id="theme-img">
                     </div>
-                    <!-- <div id="project-title">
+                    <div id="project-title">
                         <h2>Title</h2>
-                    </div> -->
+                    </div>
                     <div id="project-summary">
-                        <p>Looks like you don't have any active projects.
+                        <!-- <p>Looks like you don't have any active projects.
                             <br><br>
                             Click <a href="newProject.html">here</a> to get started!
-                        </p>
-                        <!-- <p id="summary-text">
+                        </p> -->
+                        <p id="summary-text">
                             Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
                             sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
                             convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
@@ -127,7 +129,7 @@
                             lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti 
                             sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci 
                             varius natoque penatibus et magnis dis parturient montes nascetur
-                        </p> -->
+                        </p>
                     </div>
                 </div>
             </div>
