replaced headers for all pages containing a nav bar

--- a/mobile-friendly/404.html
+++ b/mobile-friendly/404.html
@@ -45,38 +45,37 @@
                     </div>
                 </div>
                 <!--* MOBILE NAVIGATION-->
-                <!--TODO: change onclick visible to hover for better response time and less glitches-->
-                <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
+                <div class="mobileNav" id="mobileNav">
                     <div class="menu-icon-wrapper">
                         <div id="menu-bar-1" class="menu-bar"></div>
                         <div id="menu-bar-3" class="menu-bar"></div>
                         <div id="menu-bar-3" class="menu-bar"></div>
-                </div>
+                    </div>
+                    <div class="navMenu slide-right close" id="navMenu"> <!--* Dropdown-->
+                        <div class="navContent">
+                            <a href="index.html">Home 
+                                <i class="fa fa-home" id="home-icon" alt="home icon"></i></a>
+                            <!-- <a href="#" id="profile-link">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a> -->
+                            <div class="projects">
+                                <a href="newProject.html">New Project 
+                                    <i class="fa fa-plus" id="new-project-icon" alt="plus symbol icon"></i></a>
+                                <a href="archives.html">Archive 
+                                    <i class="fa fa-bookmark" id="bookmark-icon" alt="bookmark icon"></i></a>
+                            </div>
+                            <a href="announcements.html">News
+                                <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
+                            <a href="about.html">About 
+                                <i class="fa fa-question" id="about-icon" alt="question mark icon"></i></a>
+                            <a href="settings.html">Settings 
+                                <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
+                            <a href="#" id="login-link">Logout 
+                                <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="user" id="user">
                     <a href="profile.html"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
                     <!-- <a href="login.html"><h2>Login</h2></a> -->
-                </div>
-            </div>
-            <div class="navMenu slide-right close" id="navMenu"> <!--* Dropdown-->
-                <div class="navContent">
-                    <a href="index.html">Home 
-                        <i class="fa fa-home" id="home-icon" alt="home icon"></i></a>
-                    <!-- <a href="#" id="profile-link">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a> -->
-                    <div class="projects">
-                        <a href="newProject.html">New Project 
-                            <i class="fa fa-plus" id="new-project-icon" alt="plus symbol icon"></i></a>
-                        <a href="archives.html">Archive 
-                            <i class="fa fa-bookmark" id="bookmark-icon" alt="bookmark icon"></i></a>
-                    </div>
-                    <a href="announcements.html">News
-                        <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
-                    <a href="about.html">About 
-                        <i class="fa fa-question" id="about-icon" alt="question mark icon"></i></a>
-                    <a href="settings.html">Settings 
-                        <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
-                    <a href="#" id="login-link">Logout 
-                        <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                 </div>
             </div>
         </nav>
