finalizing layout for desktop and mobile

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -83,30 +83,31 @@
         </nav>
     </header>
     <div class="profile-wrapper">
-        <div class="profile-container">
             <div class="user-container">
                 <img src="../images/dragon/dragon-0.webp" alt="profile image" id="profilePicture">
                 <h1 id="username">Username</h1>
             </div>
-            <div class="fav-container">
-                <h2>Favs:</h2>
-                <p>Favorite thing number 1</p>
-                <p>Favorite thing number 2</p>
-                <p>Favorite thing number 2</p>
+            <div class="profile-container">
+                <div class="fav-container">
+                    <h2>Favs:</h2>
+                    <p>Favorite thing number 1</p>
+                    <p>Favorite thing number 2</p>
+                    <p>Favorite thing number 2</p>
+                </div>
+                <div class="bio-container">
+                    <h2>Bio:</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
+                                    sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
+                                    convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
+                                    fringilla lacus nec metus bibendum egestas</p>
+                </div>
             </div>
-        </div>
-        <div class="bio-container">
-            <h2>Bio:</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
-                            sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
-                            convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
-                            fringilla lacus nec metus bibendum egestas</p>
-        </div>
     </div>
-    <div class="current-project-wrapper">
+    <div class="main-wrapper">
+        <div class="current-project-wrapper">
             <div class="current-project-container">
                 <div id="area-title">
-                    <h1>Your Current Project</h1>
+                    <h1>Current Project</h1>
                 </div>
                 <div class="progress-info-container">
                     <div id="project-img">
@@ -143,7 +144,7 @@
                 </label>
                 <i class="fa fa-unlock" alt="unlocked icon"></i>
             </div>
-            <h1 id="badge-title">Badges</h1>
+            <h1 id="badge-title">All Time Badges</h1>
             <!--* Completed one project-->
             <div class="badge-wrapper">
                 <img src="../images/badges/complete-one-project-mono.webp" id="complete-one-project" class="badge pulse">
@@ -229,6 +230,7 @@
         <p id="instruction">To give yourself a badge, simply activate the toggle and click on a badge. 
                         Click on it again to remove it.</p>
         </div>
+    </div>
     <!--* FOOTER-->
     <!--! Keep link to logo artist for permission to use-->
     <footer id="footer">
