--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -83,6 +83,7 @@
         </nav>
     </header>
     <div class="profile-wrapper">
+        <a id="profileUpdate" href=""><i class="fa fa-gear"></i></a>
             <div class="user-container">
                 <img src="../images/dragon/dragon-0.webp" alt="profile image" id="profilePicture">
                 <h1 id="username">Username</h1>
