finalizing mobile layout

--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -83,7 +83,8 @@
         </nav>
     </header>
     <div class="archive-warning hide">
-        <h3>You already have a project in progress. Click <a>here</a> to archive it.</h3>
+        <h3>You already have a maximum of 5 projects in progress. Click 
+            <a href="archives.html">here</a> to archive one.</h3>
     </div>
     <div class="new-project-wrapper">
         <h1>Create a New Project</h1>
