--- a/mobile-friendly/archives.html
+++ b/mobile-friendly/archives.html
@@ -147,5 +147,12 @@
             </div>
         </a>      
     </div>
+    <!--* FOOTER-->
+    <!--! Keep link to logo artist for permission to use-->
+    <footer id="footer">
+        <p id="copyright">&copy;2025. All rights reserved.</p>
+        <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
+        <p id="contact"><a href="contact.php">Contact Us</a></p>
+    </footer>
 </body>
 </html>
