--- a/mobile-friendly/archives.html
+++ b/mobile-friendly/archives.html
@@ -81,8 +81,13 @@
             </div>
         </nav>
     </header>
-    <div class="main-wrapper">
+    <div class="title-wrapper">
         <h1>All Your Projects</h1>
+        <div class="instruction-wrapper">
+            <p><i class="fa fa-star" id="star-icon" alt="star icon"></i> = Active Project</p>
+        </div>
+    </div>
+    <div class="main-wrapper">
         <a href="project.html" class="overview-container">
             <img src="../images/genre-covers/placeholder(v3).webp">
             <div class="overview-info">
