added footer to settings page and made it so it's at the bottom of the page

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -167,6 +167,13 @@
             </div>
         </div>
     </div>
+    <!--* FOOTER-->
+    <!--! Keep link to logo artist for permission to use-->
+    <footer id="footer">
+        <p id="copyright">&copy;2025. All rights reserved.</p>
+        <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
+        <p id="contact"><a href="contact.php">Contact Us</a></p>
+    </footer>
 <script>
     function clickHandle(evt, settingTab) {
         let i, tabcontent, tablinks;
