fixed some typos and wording for badges on home and profile pages as well as announcements page

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -150,7 +150,7 @@
                 <img src="../images/badges/complete-one-project-mono.webp" id="complete-one-project" class="badge pulse">
                 <div class="badgeToPopup" id="complete-one-project-popup">
                     <h4>Completed 1 Project</h4>
-                    <p>Congrats on creating your first project!</p>
+                    <p>Congrats on finishing your first project!</p>
                 </div>
             </div>
             <!--* Completed 5 projects-->
@@ -174,7 +174,7 @@
                 <img src="../images/badges/streak-fiend-mono.webp" id="streak-fiend" class="badge pulse">
                 <div class="badgeToPopup" id="streak-fiend-popup">
                     <h4>Streak Fiend</h4>
-                    <p>Completed a project witha perfect streak!</p>
+                    <p>Completed a project with a perfect streak!</p>
                 </div>
             </div>
             <!--* Veteran Streaker-->
@@ -199,7 +199,7 @@
             <div class="badge-wrapper">
                 <img src="../images/badges/vet-guild-mono.webp" id="vet-guild" class="badge pulse">
                 <div class="badgeToPopup" id="vet-guild-popup">
-                    <h3>Veteran Guildmember</h3>
+                    <h4>Veteran Guildmember</h4>
                     <p>You've participated in the yearly challenge multiple years in a row!</p>
                 </div>
             </div>
