--- a/mobile-friendly/announcements.html
+++ b/mobile-friendly/announcements.html
@@ -85,20 +85,20 @@
     <div class="announce">
         <h1 id="announce-title">Announcements</h1>
         <div class="announce-container">
-            <div class="announce-contents hide">
+            <div class="announce-contents">
                 <h2>Beta Testing is now open!</h2>
                 <p>
-                    Feel free to use the site like normal. All we ask is that if you come across a problem
+                    Feel free to use the site like normal. If you come across a problem
                     or something doesn't look right, report the issue to <a href="">contact us</a> or message
                     the creator on discord.
                     <br><br>
-                    We thank you for your help and patience while we work out all the kinks in the code.
+                    We thank you for your help and patience while all the kinks in the code are worked out.
                 </p>
                 <div class="sign-off">
-                    <p>Happy writing! - The Elsewhere Writers Guild Staff</p>
+                    <p>Happy writing! - The Elsewhere Writers Guild Developer</p>
                 </div>
             </div>
-            <div class="announce-contents">
+            <div class="announce-contents hide">
                 <h2>No Announcements Yet</h2>
                 <img src="../images/pngs/hot-dog.png" class="spin">
             </div>
