--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -283,14 +283,14 @@
                 <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
                 <div class="badgeToPopup" id="quarter-quomplete-popup">
                     <h4>Quarter Quomplete</h4>
-                    <p>Reached the 25% mark! That's a quarter of the way!</p>
+                    <p>Reached the 25% mark! That's a quarter of the way there!</p>
                 </div>
             </div>
             <!--* Half Way-->
             <div class="badge-wrapper">
                 <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
                 <div class="badgeToPopup" id="half-way-popup">
-                    <h4>Half-Way There,<br>Woah! Livin' on a-</h4>
+                    <h4>Half-Way There, Woah!<br>Livin' on a-</h4>
                     <p>Reached the 50% mark<br>on your current project.<br>Good job!</p>
                 </div>
             </div>
@@ -378,7 +378,7 @@
             <div class="badge-wrapper">
                 <img src="../images/badges/journey-mono.webp" id="journey" class="badge pulse">
                 <div class="badgeToPopup" id="journey-popup">
-                    <h4>It's All About the Journey</h4>
+                    <h4>It's All About The Journey</h4>
                     <p>The only plan you have is to explore and discover the project along the way</p>
                 </div>
             </div>
@@ -428,7 +428,7 @@
                 <img src="../images/badges/hear-ye-mono.webp" id="hear-ye" class="badge pulse">
                 <div class="badgeToPopup" id="hear-ye-popup">
                     <h4>Hear Ye! Hear Ye!</h4>
-                    <p>You've told someone about your goal, whether it be a close friend or the whole world!</p>
+                    <p>You've told someone about your goal, whether a close friend or the whole world!</p>
                 </div>
             </div>
             <!--* Breakthrough-->
