removed 404 page link from switch project popup

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -25,8 +25,8 @@
             <div class="project-select-content" onclick="hideProjectPopup()">
                 <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
                 <div class="project-info">
-                    <a href="404.html"><h3 id="popup-project-title"><i class="fa fa-star" id="star-icon" alt="star icon"></i> 
-                        PH-Project 1</h3></a>
+                    <h3 id="popup-project-title"><i class="fa fa-star" id="star-icon" alt="star icon"></i> 
+                        PH-Project 1</h3>
                     <div class="project-stats">
                         <p id="popup-goal">Goal: 10,000/50,00</p>
                         <p id="popup-days-left">Days Left: Some</p>
