--- a/mobile-friendly/archives.html
+++ b/mobile-friendly/archives.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
     <header>
         <div class="logo">
                 <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
@@ -26,7 +27,6 @@
                     <div class="projects-container">
                         <a>Projects</a>
                         <div class="projects-dropdown"> <!--*Projects dropdown-->
-                            <!--TODO: maybe put dropdown css in two separate files from everything else so they can both be relative to their parents-->
                             <a href="newProject.html">Create New Project</a>
                             <a href="archives.html">Current/Past Projects</a>
                         </div>
@@ -41,7 +41,7 @@
                         <div class="user-content"> <!--* User Dropdown-->
                             <a href="profile.html">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
                             <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
-                            <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                            <a href="login.html">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                                 <i class="fa fa-question" id="about-icon" alt="question mark icon"></i></a>
                             <a href="settings.html">Settings 
                                 <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
-                            <a href="#" id="login-link">Logout 
+                            <a href="login.html" id="login-link">Logout 
                                 <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
