--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -124,7 +124,6 @@
                     <div class="projects-container">
                         <a>Projects</a>
                         <div class="projects-dropdown"> <!--*Projects dropdown-->
-                            <!--TODO: maybe put dropdown css in two separate files from everything else so they can both be relative to their parents-->
                             <a href="newProject.html">Create New Project</a>
                             <a href="archives.html">Current/Past Projects</a>
                         </div>
@@ -139,7 +138,7 @@
                         <div class="user-content"> <!--* User Dropdown-->
                             <a href="profile.html">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
                             <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
-                            <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                            <a href="login.html">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -167,7 +166,7 @@
                                 <i class="fa fa-question" id="about-icon" alt="question mark icon"></i></a>
                             <a href="settings.html">Settings 
                                 <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
-                            <a href="#" id="login-link">Logout 
+                            <a href="login.html" id="login-link">Logout 
                                 <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
