started profile creation page

--- a/mobile-friendly/account-create.html
+++ b/mobile-friendly/account-create.html
@@ -74,7 +74,7 @@
 
             <div id="submit-button">
                 <button value="Submit" class="submit-btn" id="submit">Submit</button>
-                <a href="">Create Profile</a>
+                <a href="profile-create.html">Create Profile</a>
             </div>
         </form>
         <script>
