profile create html added

--- a/mobile-friendly/account-create.html
+++ b/mobile-friendly/account-create.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="account-wrapper">
-        <form id="signup">
+        <form id="signup" action="" method="post">
             <div class="input-warpper">
                 <label for="username">Username:</label>
                 <input type="text" 
