mobile layout generally complete. Now to test

--- a/mobile-friendly/profile-create.html
+++ b/mobile-friendly/profile-create.html
@@ -22,22 +22,24 @@
                 <label for="bio">Bio: Tell everyone a little about yourself</label>
                 <textarea name="bio" id="bio" minlength="1" maxlength="300" placeholder="Max Length: 300 characters"></textarea>
             </div>
-            <h3>Favorites: What are your favorite books or authors?</h3>
+            <label>Favorites: What are your favorite books or authors?</label>
             <div class="input-wrapper">
                 <div class="fav-content">
                         <label for="fav-1">1</label>
-                        <textarea class="favs" name="fav-1" id="fav-1" minlength="1" maxlength="100"></textarea>
+                        <textarea class="favs" name="fav-1" id="fav-1" minlength="1" maxlength="70"></textarea>
                     </div>
                     <div class="fav-content">
                         <label for="fav-2">2</label>
-                        <textarea class="favs" name="fav-2" id="fav-2" minlength="1" maxlength="100"></textarea>
+                        <textarea class="favs" name="fav-2" id="fav-2" minlength="1" maxlength="70"></textarea>
                     </div>
                     <div class="fav-content">
                         <label for="fav-3">3</label>
-                        <textarea class="favs" name="fav-3" id="fav-3" minlength="1" maxlength="100"></textarea>
+                        <textarea class="favs" name="fav-3" id="fav-3" minlength="1" maxlength="70"></textarea>
                     </div>
             </div>
-            <button value="Submit" id="profile-create-button">Choose Your Profile Picture</button>
+            <div class="button-right">
+                <button value="Submit" id="profile-create-button">Next</button>
+            </div>
         </form>
     </div>
 </body>
