--- a/mobile-friendly/profile-create.html
+++ b/mobile-friendly/profile-create.html
@@ -22,7 +22,7 @@
                 <label for="bio">Bio: Tell everyone a little about yourself</label>
                 <textarea name="bio" id="bio" minlength="1" maxlength="300" placeholder="Max Length: 300 characters"></textarea>
             </div>
-            <label>Favorites: What are your favorite books or authors?</label>
+            <label>What are your favorite books or authors?</label>
             <div class="input-wrapper">
                 <div class="fav-content">
                         <label for="fav-1">1</label>
