created pfp choosing page

--- a/mobile-friendly/profile-create.html
+++ b/mobile-friendly/profile-create.html
@@ -40,6 +40,7 @@
                 </div>
                 <div class="button-right">
                     <button value="Submit" id="profile-create-button">Next</button>
+                    <a href="choose-pfp.html">Choose pfp</a>
                 </div>
             </form>
         </div>
