forgot password page completed pending testing

--- a/mobile-friendly/login.html
+++ b/mobile-friendly/login.html
@@ -35,7 +35,7 @@
                 </div>
             </form>
             <div class="forgot-password">
-                <a href="forgot-password.php">Forgot your password?</a>
+                <a href="forgot-password.html">Forgot your password?</a>
                 <a href="account-create.html">Create a new account</a>
             </div>
         </div>
