removed the username requirement from the password reset system

--- a/mobile-friendly/forgot-password.html
+++ b/mobile-friendly/forgot-password.html
@@ -17,14 +17,12 @@
 <body>
     <div class="reset-wrapper">
         <div class="reset-content">
-            <h3>Enter the email address and username associated with your account to receive a 
+            <h3>Enter the email address associated with your account to receive a 
                 one-time email to reset your password.</h3>
             <form id="reset-password">
                 <div class="forget-container">
-                    <label for="username">Username:</label>
-                    <input class="reset-input" type="username" name="username" id="username" placeholder="username" require>
                     <label for="email">Email:</label>
-                    <input class="reset-input" type="email" name="email" id="forget-email" placeholder="email address" require>
+                    <input class="reset-input" type="email" name="email" id="forget-email" require>
                 </div>
                 <div class="forget-button-wrapper">
                     <button type="submit" id="submit-btn" class="submit-btn">Send</button>
