created successful request sent page and finished layout for mobile, tablet, and desktop

--- a/mobile-friendly/reset-success.html
+++ b/mobile-friendly/reset-success.html
@@ -6,8 +6,8 @@
     <meta property="og:title" content="Elsewhere Writers Guild Official Website"> 
     <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
     <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
-    <meta property="og:url" content="http://www.elsewherewriters.com/forgot-password">
-    <title>Forgot Password</title>
+    <meta property="og:url" content="http://www.elsewherewriters.com/reset-success">
+    <title>Password Reset Successful</title>
     <link rel="stylesheet" href="mf-css/style.css">
     <link rel="stylesheet" href="mf-css/login.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
@@ -15,20 +15,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="reset-wrapper">
-        <div class="reset-content">
-            <h3>Enter the email address associated with your account to receive a 
-                one-time email to reset your password.</h3>
-            <form id="reset-password">
-                <div class="forget-container">
-                    <label for="email">Email:</label>
-                    <input class="reset-input" type="email" name="email" id="forget-email" require>
-                </div>
-                <div class="forget-button-wrapper">
-                    <button type="submit" id="submit-btn" class="submit-btn">Send</button>
-                    <a href="reset-success.html">success</a>
-                </div>
-            </form>
+    <div class="success-wrapper">
+        <div class="success-container">
+            <h1>Hazzah!</h1>
+            <h2>Your request went through successfully! Check your inbox for further instructions</h2>
+            <a href="index.html">Return to the home page</a>
         </div>
     </div>
 </body>
