finish tweaking dark and light themes to prevent weir color mismatches

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -121,12 +121,12 @@
                         <div class="theme-change-button">
                             <a>Set Theme</a>
                             <div class="theme-change-dropdown" id="theme-change-dropdown">
-                                <p class="setTheme" onclick="setTheme('dark0')">Dark-0</p>
-                                <p class="setTheme" onclick="setTheme('dark1')">Dark-1</p>
+                                <p class="setTheme" onclick="setTheme('dark1')">Dark Purple</p>
+                                <!-- <p class="setTheme" onclick="setTheme('dark1')">Dark-1</p>
                                 <p class="setTheme" onclick="setTheme('dark2')">Dark-2</p>
-                                <p class="setTheme" onclick="setTheme('dark3')">Dark-3</p>
-                                <p class="setTheme" onclick="setTheme('light1')">Light-1</p>
-                                <p class="setTheme" onclick="setTheme('light2')">Light-2</p>
+                                <p class="setTheme" onclick="setTheme('dark3')">Dark-3</p> -->
+                                <p class="setTheme" onclick="setTheme('light1')">Light Purple</p>
+                                <!-- <p class="setTheme" onclick="setTheme('light2')">Light-2</p> -->
                             </div>
                         </div>
                     </div>
