--- a/mobile-friendly/login.html
+++ b/mobile-friendly/login.html
@@ -23,9 +23,9 @@
             </div>
             <form method="post">
                 <label for="username">Username:</label>
-                <input class="input" type="text" id="username" name="username" required>
+                <input class="input-login" type="text" id="username" name="username" required>
                 <label for="password">Password:</label>
-                <input class="input" type="password" id="password" name="password" required>
+                <input class="input-login" type="password" id="password" name="password" required>
                 <div class="checkbox-wrapper">
                     <input type="checkbox" class="checkbox" onclick="showPassword()">
                     <label for="checkbox">Show Password</label>
