finished light and dark blue themes

--- a/mobile-friendly/project.html
+++ b/mobile-friendly/project.html
@@ -94,6 +94,7 @@
         <div class="pb-background">
             <h1>Project Progress</h1>
             <div class="progress-bar">
+                <div class="border"></div>
                 <div id="percentage" class="percentage clickable"></div>
             </div>
             <div class="progress-info-wrapper">
