--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -122,11 +122,10 @@
                             <a>Set Theme</a>
                             <div class="theme-change-dropdown" id="theme-change-dropdown">
                                 <p class="setTheme" onclick="setTheme('dark1')">Dark Purple</p>
-                                <!-- <p class="setTheme" onclick="setTheme('dark1')">Dark-1</p>
-                                <p class="setTheme" onclick="setTheme('dark2')">Dark-2</p>
-                                <p class="setTheme" onclick="setTheme('dark3')">Dark-3</p> -->
+                                <p class="setTheme" onclick="setTheme('dark2')">Dark Blue</p>
+                                <p class="setTheme" onclick="setTheme('dark3')">Dark Red</p>
                                 <p class="setTheme" onclick="setTheme('light1')">Light Purple</p>
-                                <!-- <p class="setTheme" onclick="setTheme('light2')">Light-2</p> -->
+                                <p class="setTheme" onclick="setTheme('light2')">Light Blue</p>
                             </div>
                         </div>
                     </div>
