started and tweaking dark red theme

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -126,6 +126,7 @@
                                 <p class="setTheme" onclick="setTheme('dark3')">Dark Red</p>
                                 <p class="setTheme" onclick="setTheme('light1')">Light Purple</p>
                                 <p class="setTheme" onclick="setTheme('light2')">Light Blue</p>
+                                <p class="setTheme" onclick="setTheme('light3')">Light Red</p>
                             </div>
                         </div>
                     </div>
