started contact page

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -480,7 +480,7 @@
     <footer id="footer">
         <p id="copyright">&copy;2025. All rights reserved.</p>
         <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
-        <p id="contact"><a href="contact.php">Contact Us</a></p>
+        <p id="contact"><a href="contact.html">Contact Us</a></p>
     </footer>
     <script>
         function userClick() {
