finished mobile layout for contact page

--- a/mobile-friendly/contact.html
+++ b/mobile-friendly/contact.html
@@ -88,12 +88,12 @@
             <form>
                 <div class="user-wrapper">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" placeholder="required" require>
+                    <input class="input" type="text" id="username" name="username" placeholder="required" require>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="required" require>
+                    <input class="input" type="email" id="email" name="email" placeholder="required" require>
                 </div>
                 <div class="message-wrapper">
-                    <label for="message">Message</label>
+                    <label for="message">Message:</label>
                     <textarea name="message" id="message" require></textarea>
                 </div>
                 <div class="contact-button">
