working on desktop layout of contact page

--- a/mobile-friendly/contact.html
+++ b/mobile-friendly/contact.html
@@ -86,15 +86,17 @@
             <h1>Contact Us</h1>
             <h3>Let us know what's going on</h3>
             <form>
-                <div class="user-wrapper">
-                    <label for="username">Username:</label>
-                    <input class="input" type="text" id="username" name="username" placeholder="required" require>
-                    <label for="email">Email:</label>
-                    <input class="input" type="email" id="email" name="email" placeholder="required" require>
-                </div>
-                <div class="message-wrapper">
-                    <label for="message">Message:</label>
-                    <textarea name="message" id="message" require></textarea>
+                <div class="content-wrapper">
+                    <div class="user-wrapper">
+                        <label for="username">Username:</label>
+                        <input class="input" type="text" id="username" name="username" placeholder="required" require>
+                        <label for="email">Email:</label>
+                        <input class="input" type="email" id="email" name="email" placeholder="required" require>
+                    </div>
+                    <div class="message-wrapper">
+                        <label for="message">Message:</label>
+                        <textarea name="message" id="message" require></textarea>
+                    </div>
                 </div>
                 <div class="contact-button">
                     <input type="submit" id="submit" value="Submit">
