changed wording of badge instructions

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -489,8 +489,8 @@
             </div>
             <div class="instruction-wrapper">
                 <p class="instruction">
-                    To award yourself a badge, simply activate the toggle and click on a badge. 
-                    Click again to un-award the badge.
+                    To give yourself a badge, simply activate the toggle and click on a badge. 
+                    Click again to remove the badge.
                 </p>
                 <div class="slider-container">
                     <i class="fa fa-lock" alt="lock icon"></i>
