--- a/forgot-password.html
+++ b/forgot-password.html
@@ -8,8 +8,8 @@
     <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
     <meta property="og:url" content="http://www.elsewherewriters.com/forgot-password">
     <title>Forgot Password</title>
-    <link rel="stylesheet" href="mf-css/style.css">
-    <link rel="stylesheet" href="mf-css/login.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
