removed hide login links and started password reset php

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -19,7 +19,7 @@
         <div class="reset-content">
             <h3>Enter the email address associated with your account to receive a 
                 one-time email to reset your password.</h3>
-            <form id="reset-password">
+            <form id="reset-password" method="post" action="php-processes/send-password-reset">
                 <div class="forget-container">
                     <label for="email">Email:</label>
                     <input class="reset-input" type="email" name="email" id="forget-email" require>
