changed onkeyup function trigger to onchange for email

--- a/account-create.html
+++ b/account-create.html
@@ -82,7 +82,7 @@
                     name="email" 
                     id="email" 
                     class="input"
-                    onkeyup="checkEmail();"
+                    onchange="checkEmail();"
                     required>
                     
 
