--- a/account-create.html
+++ b/account-create.html
@@ -63,7 +63,7 @@
     <div class="account-wrapper">
         <form id="signup" action="php-processes/signup" method="post">
             <div class="input-warpper">
-                <label for="username">Username:</label>
+                <label for="username" id="usernameLabel">Username:</label>
                 <input type="text" 
                     autocomplete="new-username" 
                     name="username" 
@@ -77,7 +77,7 @@
 
                 <span id="user-availability-status"></span>
 
-                <label for="email">Email:</label>
+                <label for="email" id="emailLabel">Email:</label>
                 <input type="email" 
                     name="email" 
                     id="email" 
@@ -88,7 +88,7 @@
 
                 <span id="email-availability-status"></span>
 
-                <label for="pwd">Password:</label>
+                <label for="pwd" id="passwordLabel">Password:</label>
                 <input type="password"
                     autocomplete="new-password" 
                     name="pwd" 
